Fix the the user customer conflict